--- a/src/components/modal.css
+++ b/src/components/modal.css
@@ -4,8 +4,8 @@
   right: 0;
   bottom: 0;
   left: 0;
-
   background: rgba(0, 0, 0, 0.35);
+  z-index: 100;
 }
 
 .modal-bottom {
@@ -16,6 +16,7 @@
   padding: 36px 16px;
   border-radius: 4px 4px 0 0;
   background: #fff;
+  z-index: 101;
 }
 
 .animation-bottom {
